# services/wallet-service/docs/swagger.json
@@ -4429,6 +4429,9 @@
                 "seq_no": {
                     "type": "integer"
                 },
+                "tran_desc": {
+                    "type": "string"
+                },
                 "tran_type": {
                     "type": "string"
                 },
@@ -4459,6 +4462,9 @@
                 "dr_cr": {
                     "type": "string"
                 },
+                "metadata": {
+                    "type": "object"
+                },
                 "narrative": {
                     "type": "string"
                 },
@@ -4473,6 +4479,9 @@
                 },
                 "tfr_seq_no": {
                     "type": "integer"
+                },
+                "tran_desc": {
+                    "type": "string"
                 },
                 "tran_type": {
                     "type": "string"
